# CobWeb-lnx

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
cobweb/: crawler.py  requirements.in  requirements.txt
src/: crawler.py
src/CobWeb/: __init__.py  crawler.py
