[tool.poetry]
name = "cobweb"
version = "0.1.0"
description = ""
authors = ["GoncaloMark <gmgoncalo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pyyaml = "^6.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
