# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CobWeb-lnx"
version = "1.1.0"
authors = [
    { name="Gonçalo Marques (_lnx/lnxdread)", email="gmgoncalo7@gmail.com" },
]
description = "CobWeb is a Python library for web scraping. The library consists of two classes: Spider and Scraper."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["data", "crawler", "scraper"]

[project.urls]
"Homepage" = "https://github.com/GoncaloMark/Amara-CobWeb"
"Bug Tracker" = "https://github.com/GoncaloMark/Amara-CobWeb/issues"