[options]
install_requires = 
    aiohttp
    aiosignal
    async-timeout
    attrs
    beautifulsoup4
    certifi
    charset-normalizer
    frozenlist
    idna
    jsonschema
    multidict
    pyproject-toml
    pyrsistent
    PyYAML
    setuptools
    soupsieve
    toml
    urllib3
    yarl
